@@ -1,3 +1,8 @@
+[B]Version 1.0.7[/B]
+
+- Fix sportsnet now authentication (github.com/mchllws55)
+- Reauthorize on stream authentication error (github.com/portse)
+
 [B]Version 1.0.6[/B]
 
 - Modify publish point URL to use secure http (github.com/portse).
